--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
   <section id="header">
     <div class="row">
       <div class="text-start banner">
-        <h1 class="titulo">ALAMBRADOS <!--<span class="pilar">-->PILAR<!--</span>--><span class="subt"> - LA LONJA</span></h1>
+        <h1 class="titulo">ALAMBRADOS <!--<span class="pilar">-->PILAR<!--</span>--><span class="subt"> &ensp;LA LONJA</span></h1>
       </div>
       <div class=""><img class="imgban" src="img/alam.png" alt=""></div>
     </div>
