--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <section id="header">
       <div class="row">
         <div class="text-start banner">
-          <h1 class="titulo">ALAMBRADOS <!--<span class="pilar">-->PILAR<!--</span>--><span class="subt"> &ensp;LA
+          <h1 class="titulo">ALAMBRADOS PILAR<span class="subt"> &ensp;LA
               LONJA</span></h1>
-          <!-- <div class=""><img class="imgban" src="img/alam.png" alt=""></div> -->
+          
         </div>
       </div>
 
@@ -39,6 +39,7 @@
           <a href="#alambrados">Alambrados</a>
           <a href="#portones">Portones</a>
           <a href="#piletas">Piletas</a>
+          <a href="#empalizadas">Empalizadas</a>
         </nav>
       </div>
     </section>
@@ -63,9 +64,9 @@
             Responsabilidad, prolijidad, buena atención y el mejor precio del mercado nos caracterizan.</p>
         </div>
       </div>
-      <!-- </section>
+      </section>
 
-    <section id="ubicacion"> -->
+    <section id="ubicacion">
       <div class="row">
         <div class="col-12 col-md-6">
           <h2>Ubicación</h2>
@@ -246,7 +247,22 @@
         <button class="carousel-button next">&gt;</button>
       </div>
     </section>
-
+    <section id="empalizadas">
+      <h2>Empalizadas</h2>
+      <p>Realizamos empalizadas con y sin tejido para club de campo y club de Golf</p>
+      <div class="carousel-container fade-in">
+        <button class="carousel-button prev">&lt;</button>
+        <div class="carousel">
+          <img src="img/Empalizadas/1.jpeg" alt="">
+          <img src="img/Empalizadas/2.jpeg" alt="">
+          <img src="img/Empalizadas/3.jpeg" alt="">
+          <img src="img/Empalizadas/4.jpeg" alt="">
+          <img src="img/Empalizadas/5.jpeg" alt="">
+          <img src="img/Empalizadas/6.jpeg" alt="">
+        </div>
+        <button class="carousel-button next">&gt;</button>
+      </div>
+    </section>
     <footer>
       <div class="row">
         <div class="col-4 text-start">
