--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </div>
     </section>
     <footer>
-      <div class="row">
+      <div class="row m-1">
         <div class="col-4 text-start">
           <i class="fa-solid fa-house"></i>&ensp; Av. Cayetano Beliera 4788. Barrio La Lonja. Pilar<br>
           <i class="fa-solid fa-phone"></i>&ensp;Consultas 11 2710-0151<br>
