--- a/index.html
+++ b/index.html
@@ -271,9 +271,10 @@
           <i class="fa-brands fa-instagram"></i>&ensp;<i class="fa-brands fa-facebook"></i>&ensp;<i
             class="fa-brands fa-twitter"></i>
         </div>
-
-        <div class="col-5 copy">
-          <span class="text-center">&copy 2024 - Alambrados Pilar La Lonja - Todos los derechos reservados</span>
+      </div>
+      <div class="row m-1 copy">
+        <div class="col-5">
+          <span>&copy 2024 - Alambrados Pilar La Lonja - Todos los derechos reservados</span>
         </div>
       </div>
     </footer>
